--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'java'
-//    id 'io.freefair.lombok' version '5.3.0'
     id 'io.qameta.allure' version '2.11.2'
 }
 
@@ -37,4 +36,5 @@ dependencies {
 test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
+    systemProperty 'spring.datasource.url', System.getProperty('spring.datasource.url')
 }
