--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'io.qameta.allure' version '2.11.2'
+    id 'io.qameta.allure' version '2.8.1'
 }
 
 group = 'ru.netology'
@@ -11,9 +11,9 @@ compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
 
 allure {
-    version = '2.20.1'
+    version = '2.23.0'
     useJUnit5 {
-        version = '2.20.1'
+        version = '2.23.0'
     }
 }
 
@@ -24,7 +24,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     testImplementation 'com.codeborne:selenide:6.12.2'
-    testImplementation 'io.qameta.allure:allure-selenide:2.20.1'
+    implementation 'io.qameta.allure:allure-selenide:2.23.0'
     testImplementation 'mysql:mysql-connector-java:8.0.28'
     testImplementation 'org.postgresql:postgresql:42.5.1'
     testImplementation 'org.springframework:spring-test:5.3.27'
@@ -38,4 +38,8 @@ test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
     systemProperty 'spring.datasource.url', System.getProperty('spring.datasource.url')
+}
+
+configurations {
+    testCompile
 }
